--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Javascript</h1>
-<button onclick="addToCart()">Add To Cart</button>
+    <div id="store">
+        
+    </div>
+    <!-- <h1>Javascript</h1> -->
+<!-- <button onclick="addToCart()">Add To Cart</button> -->
     <!-- <script src="./app.js"></script> -->
      <!-- <script src="./operators.js"></script> -->
       <!-- <script src="./conditions.js"></script> -->
        <!-- <script src="./loopingstatements.js"></script> -->
-        <script src="./functionsex.js"></script>
+        <!-- <script src="./functionsex.js"></script> -->
+         <!-- <script src="./programs.js"></script> -->
+
+         <script src="./array.js"></script>
 </body>
 </html>
