--- a/index.html
+++ b/index.html
@@ -3,21 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Training</title>
+    <h1>Javascript</h1>
+    <!-- <button name = "button">click  me</button> -->
 </head>
+<!-- <script src="functions.js"></script> -->
+<!-- <script src = "/day6/array.js"></script> -->
+<script src = "/async.js"></script>
 <body>
-    <div id="store">
-        
-    </div>
-    <!-- <h1>Javascript</h1> -->
-<!-- <button onclick="addToCart()">Add To Cart</button> -->
-    <!-- <script src="./app.js"></script> -->
-     <!-- <script src="./operators.js"></script> -->
-      <!-- <script src="./conditions.js"></script> -->
-       <!-- <script src="./loopingstatements.js"></script> -->
-        <!-- <script src="./functionsex.js"></script> -->
-         <!-- <script src="./programs.js"></script> -->
-
-         <script src="./array.js"></script>
+    
 </body>
 </html>
