--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 <!-- <script src = "/day6/array.js"></script> -->
 <script src = "/async.js"></script>
 <body>
+    <table>
+        <thead>
+            <th>S.No</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Company</th>
+        </thead>
+        <tbody id = "store"> 
+
+        </tbody>
+    </table>
     
 </body>
 </html>
