--- a/train/dom.html
+++ b/train/dom.html
@@ -36,10 +36,25 @@
     <div class="test">div2</div>
     <div class="test">div3</div> -->
     <form> 
-        <input type="text" placeholder="enter name" id = "uName"><br/>
+        <!-- <input type="text" placeholder="enter name" id = "uName"><br/>
         <input type="email" placeholder="enter email" id = "uEmail"><br/>
         <input type="password" placeholder="enter password" id = "uPass"><br/>
-        <input type="submit"><br/>
+        <input type="submit"><br/> -->
+        <label for="">Username : </label>
+        <input type="text" placeholder="name" id="uName"><br>
+        <label for="">Password : </label>
+        <input type="password" placeholder="password" id="uPass"><br>
+        <input type = "checkbox" id = "check">
+        <span id = "show"> show password</span>
+        <label for="">Gender : </label>
+        <input type="radio" name="gender" value="male"><span>Male</span>
+        <input type="radio" name="gender" value="female"><span>Female</span>
+        <input type="radio" name="gender" value="others"><span>Others</span>
+        <br>
+
+
+        <input type="submit"><br>
+
     </form>
 
 
